--- a/euro.html
+++ b/euro.html
@@ -50,6 +50,7 @@
   </p>
   <script src="program.js"></script>
   <script type="text/javascript">
+  score();
   /**
   * Keeps range inputs in sync with number inputs
   * @param {string} id - The element to update
